--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {},
   "author": "@stackscz",
   "license": "MIT",
+  "repository": "https://github.com/stackscz/re-app-builder",
   "dependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.1.21",
@@ -31,8 +32,6 @@
     "lodash": "^3.10.1",
     "node-sass": "^3.4.2",
     "prompt": "^1.0.0",
-    "react": "^0.14.7",
-    "react-hot-loader": "^2.0.0-alpha-4",
     "rimraf": "^2.4.3",
     "sass-loader": "^3.1.1",
     "script-loader": "^0.6.1",
