--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stackscz/re-app-builder",
+  "name": "re-app-builder",
   "version": "0.1.1",
   "description": "Webpack build tools for react",
   "main": "index.js",
