--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "author": "@stackscz",
   "license": "MIT",
   "repository": "https://github.com/stackscz/re-app-builder",
+  "engines": {
+    "npm": "^3.3.12"
+  },
   "dependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.1.21",
@@ -30,10 +33,8 @@
     "less-loader": "^2.2.1",
     "loader-utils": "^0.2.11",
     "lodash": "^3.10.1",
-    "node-sass": "^3.4.2",
     "prompt": "^1.0.0",
     "rimraf": "^2.4.3",
-    "sass-loader": "^3.1.1",
     "script-loader": "^0.6.1",
     "source-map": "^0.5.3",
     "style-loader": "^0.13.0",
