--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "re-app-builder",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "description": "Webpack build tools for react",
   "main": "index.js",
   "scripts": {},
@@ -9,14 +9,20 @@
   "repository": "https://github.com/stackscz/re-app-builder",
   "dependencies": {
     "babel": "^6.5.2",
+    "babel-cli": "^6.6.5",
     "babel-core": "^6.1.21",
     "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.1.0",
+    "babel-loader": "^6.2.4",
     "babel-plugin-remove-webpack": "^1.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
-    "babel-preset-stage-0": "^6.1.18",
+    "babel-plugin-transform-regenerator": "^6.6.5",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-polyfill": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "^6.5.0",
+    "babel-runtime": "^6.6.1",
     "baggage-loader": "^0.2.4",
     "css-loader": "^0.23.0",
     "eslint": "^1.9.0",
@@ -42,5 +48,15 @@
     "webpack-config": "^3.1.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-isomorphic-tools": "^2.2.26"
+  },
+  "peerDependencies": {
+    "babel-plugin-remove-webpack": "^1.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-regenerator": "^6.6.5",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.6.1"
   }
 }
