--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "re-app-builder",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Webpack build tools for react",
   "main": "index.js",
   "scripts": {},
@@ -48,6 +48,7 @@
     "webpack-isomorphic-tools": "^2.2.47"
   },
   "peerDependencies": {
+    "babel-eslint": "^4.1.6",
     "babel-plugin-remove-webpack": "^1.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-regenerator": "^6.6.5",
