--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "re-app-builder",
-  "version": "0.2.6",
+  "version": "0.3.6",
   "description": "Webpack build tools for react",
   "main": "index.js",
   "scripts": {},
   "author": "@stackscz",
   "license": "MIT",
   "repository": "https://github.com/stackscz/re-app-builder",
+  "engines": {
+    "node": "^4.0.0",
+    "npm": "^3.0.0"
+  },
+  "engineStrict": true,
   "dependencies": {
     "babel-core": "^6.7.4",
     "babel-eslint": "^4.1.6",
@@ -14,12 +19,11 @@
     "babel-plugin-remove-webpack": "^1.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-plugin-transform-runtime": "^6.8.0",
     "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-stage-2": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "babel-runtime": "^6.6.1",
     "baggage-loader": "^0.2.4",
     "css-loader": "^0.23.0",
@@ -46,16 +50,5 @@
     "webpack-config": "^3.1.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-isomorphic-tools": "^2.2.47"
-  },
-  "peerDependencies": {
-    "babel-eslint": "^4.1.6",
-    "babel-plugin-remove-webpack": "^1.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.6.1"
   }
 }
