--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "re-app-builder",
-  "version": "0.3.7",
+  "version": "0.4.7",
   "description": "Webpack build tools for react",
   "main": "index.js",
   "scripts": {},
@@ -27,10 +27,14 @@
     "babel-runtime": "^6.6.1",
     "baggage-loader": "^0.2.4",
     "css-loader": "^0.23.0",
-    "eslint": "^1.9.0",
-    "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.11.3",
-    "extract-text-webpack-plugin": "^0.9.1",
+    "eslint": "^2.13.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-react": "^5.2.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "fs-finder": "^1.8.1",
     "image-webpack-loader": "^1.6.2",
