--- a/package.json
+++ b/package.json
@@ -1,58 +1,80 @@
 {
   "name": "re-app-builder",
-  "version": "0.5.0",
-  "description": "Webpack build tools for react",
+  "version": "1.0.0-dev.0",
+  "description": "Webpack build tool for react",
   "main": "index.js",
   "scripts": {},
   "author": "@stackscz",
   "license": "MIT",
   "repository": "https://github.com/stackscz/re-app-builder",
   "engines": {
-    "node": "^4.0.0",
-    "npm": "^3.0.0"
+	"node": "^4.0.0",
+	"npm": "^3.0.0"
   },
   "engineStrict": true,
   "dependencies": {
-    "babel-core": "^6.7.4",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-remove-webpack": "^1.0.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-plugin-transform-runtime": "^6.8.0",
-    "babel-polyfill": "^6.7.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.5.0",
-    "babel-runtime": "^6.6.1",
-    "baggage-loader": "^0.2.4",
-    "css-loader": "^0.23.0",
-    "eslint": "^2.13.0",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.5.3",
-    "eslint-plugin-react": "^5.2.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
-    "fs-finder": "^1.8.1",
-    "image-webpack-loader": "^1.6.2",
-    "less": "^2.5.3",
-    "less-loader": "^2.2.1",
-    "loader-utils": "^0.2.11",
-    "lodash": "^3.10.1",
-    "node-sass": "^3.4.2",
-    "prompt": "^1.0.0",
-    "rimraf": "^2.4.3",
-    "sass-loader": "^3.1.1",
-    "script-loader": "^0.6.1",
-    "source-map": "^0.5.4",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
-    "webpack-config": "^3.1.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-isomorphic-tools": "^2.2.47"
+	"autoprefixer": "^6.4.1",
+	"babel-core": "^6.8.0",
+	"babel-eslint": "^6.0.4",
+	"babel-loader": "^6.2.10",
+	"babel-plugin-external-helpers": "^6.18.0",
+	"babel-plugin-lodash": "^3.2.11",
+	"babel-plugin-module-resolver": "^2.3.0",
+	"babel-plugin-react-intl": "^2.1.3",
+	"babel-plugin-syntax-flow": "^6.8.0",
+	"babel-plugin-tcomb": "^0.3.4",
+	"babel-plugin-transform-decorators-legacy": "^1.3.4",
+	"babel-plugin-transform-flow-strip-types": "^6.8.0",
+	"babel-plugin-transform-remove-console": "^6.8.0",
+	"babel-plugin-transform-runtime": "^6.8.0",
+	"babel-plugin-webpack-alias": "2.1.2",
+	"babel-preset-es2015": "^6.18.0",
+	"babel-preset-react": "^6.11.1",
+	"babel-preset-stage-0": "^6.5.0",
+	"babel-preset-stage-1": "^6.13.0",
+	"baggage-loader": "^0.2.4",
+	"cross-env": "^1.0.7",
+	"css-loader": "^0.26.1",
+	"ejs-loader": "^0.3.0",
+	"enzyme": "^2.4.1",
+	"eslint": "^2.13.1",
+	"eslint-config-airbnb": "^9.0.1",
+	"eslint-config-stacks": "0.0.3",
+	"eslint-loader": "^1.3.0",
+	"eslint-plugin-babel": "^3.3.0",
+	"eslint-plugin-flow-vars": "^0.4.0",
+	"eslint-plugin-flowtype": "^2.3.1",
+	"eslint-plugin-import": "^1.11.1",
+	"eslint-plugin-jsx-a11y": "^2.0.1",
+	"eslint-plugin-react": "^5.2.2",
+	"eslint-watch": "^2.1.13",
+	"extract-text-webpack-plugin": "v2.0.0-beta.4",
+	"file-loader": "^0.9.0",
+	"html-webpack-plugin": "2.24.1",
+	"husky": "^0.11.6",
+	"image-webpack-loader": "^3.1.0",
+	"json-loader": "^0.5.4",
+	"nconf": "^0.8.4",
+	"node-sass": "^4.1.1",
+	"postcss-loader": "^1.2.1",
+	"precss": "^1.4.0",
+	"prompt": "^1.0.0",
+	"raw-loader": "^0.5.1",
+	"react-hot-loader": "^3.0.0-beta.6",
+	"resolve-url-loader": "^1.6.1",
+	"rimraf": "^2.5.4",
+	"sass-loader": "^4.1.1",
+	"style-loader": "^0.13.1",
+	"tap-spec": "^4.1.1",
+	"tape": "^4.6.2",
+	"tape-watch": "^2.2.3",
+	"url-loader": "^0.5.7",
+	"webpack-bundle-analyzer": "^2.2.1",
+	"worker-loader": "^0.7.1",
+	"yaml-loader": "^0.4.0"
+  },
+  "peerDependencies": {
+	"webpack": "^2.2.0-rc.1",
+	"webpack-dev-server": "^2.2.0-rc.0"
   }
 }
