--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "re-app-builder",
-  "version": "1.0.0-dev.1",
+  "version": "1.0.0-dev.2",
   "description": "Webpack build tool for react",
   "main": "index.js",
   "scripts": {},
@@ -69,12 +69,10 @@
 	"tape": "^4.6.2",
 	"tape-watch": "^2.2.3",
 	"url-loader": "^0.5.7",
+	"webpack": "^2.2.0-rc.1",
 	"webpack-bundle-analyzer": "^2.2.1",
+	"webpack-dev-server": "^2.2.0-rc.0",
 	"worker-loader": "^0.7.1",
 	"yaml-loader": "^0.4.0"
-  },
-  "peerDependencies": {
-	"webpack": "^2.2.0-rc.1",
-	"webpack-dev-server": "^2.2.0-rc.0"
   }
 }
