--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "re-app-builder",
-	"version": "1.0.0-dev.10",
+	"version": "1.0.0-dev.11",
 	"description": "Webpack build tool for react",
 	"main": "bin.js",
 	"scripts": {},
@@ -28,10 +28,12 @@
 		"babel-plugin-transform-remove-console": "^6.8.0",
 		"babel-plugin-transform-runtime": "^6.8.0",
 		"babel-plugin-webpack-alias": "2.1.2",
+		"babel-polyfill": "^6.22.0",
 		"babel-preset-es2015": "^6.18.0",
 		"babel-preset-react": "^6.11.1",
 		"babel-preset-stage-0": "^6.5.0",
 		"babel-preset-stage-1": "^6.13.0",
+		"babel-runtime": "^6.22.0",
 		"baggage-loader": "^0.2.4",
 		"cross-env": "^1.0.7",
 		"css-loader": "^0.26.1",
