--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"image-webpack-loader": "^3.1.0",
 		"json-loader": "^0.5.4",
 		"nconf": "^0.8.4",
+		"node-env-file": "^0.1.8",
 		"node-sass": "^4.1.1",
 		"postcss-loader": "^1.2.1",
 		"precss": "^1.4.0",
