--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "re-app-builder",
-	"version": "1.0.0-dev.24",
+	"version": "1.0.0-dev.25",
 	"description": "Webpack build tool for react",
 	"main": "bin.js",
 	"scripts": {
@@ -43,7 +43,7 @@
 		"extract-text-webpack-plugin": "v2.0.0-beta.4",
 		"file-loader": "^0.9.0",
 		"html-webpack-plugin": "2.24.1",
-		"image-webpack-loader": "^3.1.0",
+		"image-webpack-loader": "3.3.0",
 		"json-loader": "^0.5.4",
 		"nconf": "^0.8.4",
 		"node-sass": "^4.1.1",
