--- a/example-project/package.json
+++ b/example-project/package.json
@@ -1,11 +1,13 @@
 {
  "scripts": {
   "ab": "node ./node_modules/re-app-builder/bin",
-  "dev": "NODE_ENV=development npm run ab dev",
-  "build": "NODE_ENV=development npm run ab build"
+  "clean": "rm -rf public/build",
+  "dev": "npm run clean && NODE_ENV=development npm run ab dev",
+  "build": "npm run clean && NODE_ENV=development npm run ab build",
+  "build:prod": "npm run clean && NODE_ENV=production npm run ab build"
  },
  "devDependencies": {
-  "re-app-builder": "^1.0.0-dev.26"
+  "re-app-builder": "file:../"
  },
  "dependencies": {
   "react": "^15.4.2",
