--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "re-app-builder",
-	"version": "1.0.0-dev.26",
+	"version": "1.0.0-dev.27",
 	"description": "Webpack build tool for react",
 	"main": "bin.js",
 	"scripts": {
@@ -37,31 +37,30 @@
 		"babel-preset-stage-1": "^6.13.0",
 		"babel-runtime": "^6.22.0",
 		"cross-env": "^1.0.7",
-		"css-loader": "^0.26.1",
+		"css-loader": "0.27.0",
 		"ejs-loader": "^0.3.0",
-		"enzyme": "^2.4.1",
-		"extract-text-webpack-plugin": "v2.0.0-beta.4",
-		"file-loader": "^0.9.0",
-		"html-webpack-plugin": "2.24.1",
+		"extract-text-webpack-plugin": "2.1.0",
+		"file-loader": "0.11.1",
+		"html-webpack-plugin": "2.28.0",
 		"image-webpack-loader": "3.3.0",
 		"json-loader": "^0.5.4",
 		"nconf": "^0.8.4",
 		"node-sass": "^4.1.1",
-		"postcss-loader": "^1.2.1",
+		"postcss-loader": "1.3.3",
 		"precss": "^1.4.0",
 		"prompt": "^1.0.0",
 		"raw-loader": "^0.5.1",
 		"react-hot-loader": "^3.0.0-beta.6",
-		"resolve-url-loader": "^1.6.1",
+		"resolve-url-loader": "2.0.2",
 		"rimraf": "^2.5.4",
-		"sass-loader": "^4.1.1",
-		"style-loader": "^0.13.1",
+		"sass-loader": "6.0.3",
+		"style-loader": "0.16.1",
 		"tap-spec": "^4.1.1",
 		"tape": "^4.6.2",
 		"tape-watch": "^2.2.3",
 		"tcomb": "^3.2.2",
-		"url-loader": "^0.5.7",
-		"webpack": "^2.2.0-rc.1",
+		"url-loader": "0.5.8",
+		"webpack": "2.4.1",
 		"webpack-bundle-analyzer": "^2.2.1",
 		"webpack-dev-server": "^2.2.0-rc.0",
 		"worker-loader": "^0.7.1",
