--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"webpack": "2.4.1",
 		"webpack-bundle-analyzer": "^2.2.1",
 		"webpack-dev-server": "^2.2.0-rc.0",
+		"webpack-merge": "^4.1.0",
 		"worker-loader": "^0.7.1",
 		"yaml-loader": "^0.4.0"
 	}
