--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "author": "Jiri Brabec <brabeji@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^7.1.4",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "image-webpack-loader": "^3.4.2",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0"
