--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
