--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
+    "minimist": "^1.2.0",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
     "precss": "^2.0.0",
