--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "tcomb": "^3.2.23",
+    "uglifyjs-webpack-plugin": "^1.1.4",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.6",
     "webpack-bundle-analyzer": "^2.9.0",
