--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "re-app-builder",
-  "version": "1.0.0",
+  "version": "1.1.0-dev.1",
   "main": "index.js",
   "bin": "./index.js",
   "author": "Jiri Brabec <brabeji@gmail.com>",
