--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "re-app-builder",
-  "version": "1.1.0-dev.2",
+  "version": "1.1.0-dev.3",
   "main": "index.js",
   "bin": "./index.js",
   "author": "Jiri Brabec <brabeji@gmail.com>",
@@ -41,6 +41,7 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.7.1",
+    "webpack-fail-plugin": "^2.0.0",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {}
